fix footer white space bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,7 @@ width: 80%;
     padding: 30px;
 }
 
+
 /* Media queries */
 
 @media screen and (min-width: 768px) {
@@ -249,5 +250,5 @@ width: 80%;
 @media screen and (min-width: 600px) {
     .success-image {
     margin: auto;
-    padding: 100px 250px;}
+    padding: 200px 100px 400px;}
 }
